update css background color and index

--- a/journalDB.html
+++ b/journalDB.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Test page perso DND5</title>
-	<link rel="stylesheet" href="mystyle.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Journal de bord de Va l'riia Baenund</title>
+    <link rel="stylesheet" href="mystyle.css" />
 
 </head>
 <body>
@@ -43,22 +43,27 @@
 			</div>
 		</nav>
 		<h1>
-			Accueil
+			Journal de bord
 		</h1>
 	</header>
 
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag"></div>
-		<div class="corpus"></div>
-		<div class="flag"></div>
+		<div class="flag">
+			IMAGE INSERT
+		</div>
+		<div class="corpus">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam et modi similique optio tempore laborum quis nobis, mollitia dolore perferendis perspiciatis ratione excepturi neque impedit, deleniti reprehenderit error, animi quasi.
+		</div>
+		<div class="flag">
+			IMAGE INSERT
+		</div>
+
 	</main>
 
 	<!---------------------------------------------------------------------------------------------------->
 
-	<footer>
-
-	</footer>
+	<footer></footer>
 </body>
 </html>
