--- a/index.html
+++ b/index.html
@@ -10,36 +10,26 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<div>
-				<p>
-					<a href="index.html">Accueil</a>
-				</p>
+		<nav class="navbar">
+			<div class="logo">
+				<a href="index.html"><img class="logo-size" src="assets/lolth_token.webp"></a>
 			</div>
-			<div>
-				<p>
+			<div class="menu">
+				<div>
 					<a href="pagePerso.html">Page perso</a>
-				</p>
-			</div>
-			<div>
-				<p>
+				</div>
+				<div>
 					<a href="competences.html">Compétences</a>
-				</p>
-			</div>
-			<div>
-				<p>
-					<a href="maFamille.html">Ma famille</a>
-				</p>
-			</div>
-			<div>
-				<p>
-					<a href="maQuete.html">Ma quête</a>
-				</p>
-			</div>
-			<div>
-				<p>
-					<a href="journalDB.html">Mon journal de bord</a>
-				</p>
+				</div>
+				<div>
+					<a href="maFamille.html">Famille Baenund</a>
+				</div>
+				<div>
+					<a href="maQuete.html">Quête</a>
+				</div>
+				<div>
+					<a href="journalDB.html">Journal de bord</a>
+				</div>
 			</div>
 		</nav>
 		<h1>
