img added in folder and preparing bg img

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 	<main>
 		<div class="flag"></div>
-		<div class="corpus"></div>
+		<div class="corpus" background=""></div>
 		<div class="flag"></div>
 	</main>
 
