--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag"></div>
-		<div class="corpus" background=""></div>
-		<div class="flag"></div>
+		<div class="flag">
+			<img class="bannerimg" src="assets/lolth_banner.jpeg">
+		</div>
+		<div class="corpus" id="corpusAccueil">
+			<img id="paladinPortrait" src="assets/drow paladin.jpeg">
+		</div>
+		<div class="flag">
+			<img class="bannerimg" src="assets/lolth_banner.jpeg">
+		</div>
 	</main>
 
 	<!---------------------------------------------------------------------------------------------------->
