--- a/competences.html
+++ b/competences.html
@@ -40,7 +40,9 @@
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag"></div>
+		<div class="flag">
+			<img class="banner-size" src="">
+		</div>
 		<div class="corpus"></div>
 		<div class="flag"></div>
 	</main>
