--- a/journalDB.html
+++ b/journalDB.html
@@ -32,25 +32,18 @@
 				</div>
 			</div>
 		</nav>
-		<h1>
-			Journal de bord
-		</h1>
 	</header>
 
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag">
-			IMAGE INSERT
-		</div>
+		<div class="flag"></div>
 		<div class="corpus">
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam et modi similique optio tempore laborum quis nobis, mollitia dolore perferendis perspiciatis ratione excepturi neque impedit, deleniti reprehenderit error, animi quasi.
 			</p>
 		</div>
-		<div class="flag">
-			IMAGE INSERT
-		</div>
+		<div class="flag"></div>
 
 	</main>
 
