cropped cover added

--- a/maFamille.html
+++ b/maFamille.html
@@ -37,9 +37,15 @@
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag"></div>
-		<div class="corpus"></div>
-		<div class="flag"></div>
+		<div class="parallax"></div>
+		<div class="corpus">
+			<div></div>
+			<div>
+				<p>
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore expedita magni necessitatibus fugiat maiores id ipsa corporis autem, porro et nobis temporibus laudantium ea ad officiis aliquam, nisi repellat ducimus?
+				</p>
+			</div>
+		</div>
 	</main>
 
 	<!---------------------------------------------------------------------------------------------------->
