--- a/maQuete.html
+++ b/maQuete.html
@@ -37,9 +37,11 @@
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag"></div>
-		<div class="corpus"></div>
-		<div class="flag"></div>
+		<div class="parallax"></div>
+		<div class="corpus">
+			<div></div>
+			<div></div>
+		</div>
 	</main>
 
 	<!---------------------------------------------------------------------------------------------------->
