--- a/index.html
+++ b/index.html
@@ -36,11 +36,18 @@
 	<!---------------------------------------------------------------------------------------------------->
 
 	<main>
-		<div class="flag">
-		</div>
-		<div class="corpus" id="corpusAccueil">
-		</div>
-		<div class="flag">
+		<div class="parallax"></div>
+		<div class="corpus">
+			<div></div>
+			<div>
+				<p>
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore expedita magni necessitatibus fugiat maiores id ipsa corporis autem, porro et nobis temporibus laudantium ea ad officiis aliquam, nisi repellat ducimus?
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio aliquid molestiae velit sed eveniet harum ipsam cum in dolorum molestias ex officia, illo beatae dicta. Iste aperiam quis cumque aut.
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi totam, quasi dicta expedita sed vitae eum a qui voluptatem similique earum, laudantium corrupti quam unde tempora facere, quis molestiae autem.
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non consequatur iusto saepe. Beatae reprehenderit nobis enim? Cum iusto ipsam ipsum repellendus placeat quo vitae, tempora ipsa exercitationem laboriosam veniam asperiores.
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consequuntur excepturi quia, laboriosam dicta aliquam laudantium animi qui ipsam adipisci alias debitis, nostrum reprehenderit eaque voluptas doloremque optio voluptatibus aut?
+				</p>
+			</div>
 		</div>
 	</main>
 
